# -MIA-Proyecto1_201800937

./: CMakeLists.txt  PROYECTO  README.md  main.cpp
Analizador/: lexico.l  parser.cpp  parser.h  parser.y  scanner.cpp  scanner.h
Header/: Controlador.h  Nodo.h
Header/Administracion/: Mkdisk.h
Header/Administracion/Discos/: Fdisk.h  Mkdisk.h  Rmdisk.h
Header/Reporte/: Reporte.h
Header/Script/: Exec.h  Pause.h
src/: Controlador.cpp  Nodo.cpp
src/Administracion/: Mkdisk.cpp
src/Administracion/Discos/: Fdisk.cpp  Mkdisk.cpp  Rmdisk.cpp
src/Reporte/: Reporte.cpp
src/Script/: Exec.cpp  Pause.cpp
